syntax = "proto3";
  
option java_multiple_files = true;
option java_package = "io.grpc.observer.finace";
option java_outer_classname = "FinaceProto";

package Finace;

service FinaceService {
  rpc DepositNotify (DepositRequest) returns (DepositReply) {}
}

message DepositRequest {
  sint64 timestamp = 1;
  string symbol = 2;
  string addressTo = 3;
  string txid = 4;
  string amount = 5;
  int32 confirm = 6;
  bool mining = 7;
}

message DepositReply {
  bool interrupt = 1;
}